--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <li>
       <li>
         <b> Your Name </b>
-        <a id="nikhil" href="#"> Name: Nikhil Karthik, Branch: CSE, Phone: +91-7597023796</a>
+        <a id="nishant" href="#"> Name: Nishant tyagi, Branch: CSE, Phone: +91-9571878046</a>
     </ul>
   </body>
 <html>
